# axiom-engine

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.zk  README.md  docker-compose.yml
.agents/: invariants.yml  registry.yml
.cargo/: config.toml
.github/scripts/: claude_review.py
.github/workflows/: ci.yml
crates/agent/: Cargo.toml
crates/agent/src/: api.rs  main.rs  models.rs  tools.rs  types.rs
crates/compute/: Cargo.toml
crates/compute/src/: lib.rs
crates/egg-tool/: Cargo.toml
crates/egg-tool/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs  mcp.rs
crates/nitro-tee/: Cargo.toml
crates/nitro-tee/src/: lib.rs
crates/p2p-transport/: Cargo.toml
crates/p2p-transport/src/: lib.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/pq-crypto/: Cargo.toml
crates/pq-crypto/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/trace/: Cargo.toml
crates/trace/src/: lib.rs
crates/z3-tool/: Cargo.toml
crates/z3-tool/src/: lib.rs
crates/zk-proof/: Cargo.toml  build.rs
crates/zk-proof/guest/: Cargo.toml
crates/zk-proof/guest/src/: main.rs
crates/zk-proof/src/: lib.rs
guest/: Cargo.toml
guest/src/: main.rs
infra/: prometheus.yml
scripts/: run-zk.sh
testnet/: spec.md
tests/: integration.rs
