[workspace]
members = [
    "crates/agent",
    "crates/z3-tool",
    "crates/egg-tool",
    "crates/compute",
    "crates/zk-proof",
    "crates/mcp-server",
    "guest",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
