[package]
name = "axiom-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axiom-z3-tool = { path = "../z3-tool" }
axiom-egg-tool = { path = "../egg-tool" }
axiom-compute = { path = "../compute" }
axiom-zk-proof = { path = "../zk-proof" }

# Claude API client
reqwest = { version = "0.12", features = ["json"] }
