[package]
name = "axiom-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axiom-mcp"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
axiom-z3-tool = { path = "../z3-tool" }
axiom-egg-tool = { path = "../egg-tool" }
axiom-compute = { path = "../compute" }
axiom-zk-proof = { path = "../zk-proof" }
axiom-pipeline = { path = "../pipeline" }
axiom-store = { path = "../store" }
axiom-trace = { path = "../trace" }
