[package]
name = "axiom-nitro"
version = "0.1.0"
edition = "2021"

[features]
# Enable for real AWS Nitro hardware — Linux enclave only.
# Default off to keep macOS dev builds working.
nitro = []

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
hex = "0.4.3"
sha2 = "0.11.0"
