[package]
name = "axiom-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
libp2p = { version = "0.56.0", features = [
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "ping",
    "macros",
    "tokio",
] }
